[gd_scene load_steps=10 format=2]

[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_1.png" type="Texture" id=1]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_2.png" type="Texture" id=2]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_4.png" type="Texture" id=3]
[ext_resource path="res://abstract-platformer-370-assets/PNG/Enemies/enemyWalking_3.png" type="Texture" id=4]
[ext_resource path="res://Objects/Enemy.gd" type="Script" id=5]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "Kill",
"speed": 5.0
}, {
"frames": [ ExtResource( 1 ), ExtResource( 2 ), ExtResource( 4 ) ],
"loop": true,
"name": "Walk",
"speed": 5.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 16.0
height = 12.0

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 21, 3 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 20, 21 )

[node name="Enemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 16
collision_mask = 35
script = ExtResource( 5 )

[node name="Sprite" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
animation = "Walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="FloorCheck" type="RayCast2D" parent="."]
position = Vector2( 16, -5 )
enabled = true
cast_to = Vector2( 0, 30 )
collision_mask = 2

[node name="Top_checker" type="Area2D" parent="."]
collision_layer = 16
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Top_checker"]
position = Vector2( 0, -26 )
shape = SubResource( 3 )

[node name="Side_checker" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 33

[node name="CollisionShape2D" type="CollisionShape2D" parent="Side_checker"]
shape = SubResource( 4 )

[node name="DeathTimer" type="Timer" parent="."]
one_shot = true

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Position2D" type="Position2D" parent="."]

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]

[connection signal="body_entered" from="Top_checker" to="." method="_on_Top_checker_body_entered"]
[connection signal="body_entered" from="Side_checker" to="." method="_on_Side_checker_body_entered"]
[connection signal="timeout" from="DeathTimer" to="." method="_on_DeathTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
